Added 'peep hole' functionality

--- a/statement-of-originality.yml
+++ b/statement-of-originality.yml
@@ -29,9 +29,9 @@ assets:
     url: https://upload.wikimedia.org/wikipedia/en/5/50/Windows_7_SP1_screenshot.png
     licence: fair use
 
-  - comment: "Circuit Board Wallpaper by Thomas Soellner"
-    url: https://www.123rf.com/photo_81477230_stock-vector-vector-blue-electronic-circuit-board-background.html
-    licence: standard free licence
+  - comment: "Circuit Board Wallpaper by Wallpapercave"
+    url: https://wallpapercave.com/wp/aTJ0UW5.jpg
+    licence: fair use
 
 
 # sign *your* name and uid here
