chore: update README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "yaml.schemas": {
 	"https://cs.anu.edu.au/courses/comp1720/assets/schemas/statement-of-originality.json": "statement-of-originality.yml"
-}}
+},
+"liveServer.settings.port": 5501
+}
